[workspace]
members = [
  "programs/*", "rust_projects/day_9_1",
  "rust_projects/day_9_2",
  "rust_projects/day_9_2",
  "rust_projects/day_9_3",
]
resolver = "2"

[profile.release]
# overflow-checks = false
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
